# llama.ipsum

./: .gitignore  README.md  flake.nix  justfile  main.py  pyproject.toml
app/: main.py
app/api/routes/: chat.py  models.py
app/core/: config.py  security.py
app/middleware/: __init__.py  logging.py
app/models/: schemas.py
app/services/: template_service.py  token_service.py
app/templates/chat/: completion.json.jinja
app/templates/models/: list.json.jinja
scripts/: generate_schemas.py
