[project]
name = "llama-ipsum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "jinja2>=3.1.6",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "ruamel-yaml>=0.18.10",
    "sse-starlette>=2.2.1",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "datamodel-code-generator[http]>=0.28.2",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "-v --cov=app --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# [project.optional-dependencies]
# dev = [
#     "pytest>=7.4.0",
#     "pytest-cov>=4.1.0",
#     "black>=23.7.0",
#     "isort>=5.12.0",
#     "httpx>=0.24.1",
# ]
